<resources>
    <string name="app_name">LightWeather</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_city_manage">Manage Location</string>
    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="action_add">Add City</string>
    <string name="search">Search</string>
    <string name="search_city">Search City</string>
    <string name="empty">No Result</string>
    <string name="permission_title">Access Permission</string>
    <string name="permission_message">get location need to access location.</string>
    <string name="permission_denied">you denied permission request</string>
    <string name="permission_never_ask_again">can\'t get you location</string>
    <string name="auto_location">Detecting&#8230;</string>
    <string name="nodata">No data</string>
    <string name="gps_disabled_toast">please enable GPS provider</string>
    <string name="no_internet_toast">No internet!</string>
    <string name="sun_and_wind_title">Sun and wind</string>
    <string name="pm2_5">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="so2">SO₂</string>
    <string name="no2">NO₂</string>
    <string name="weather_detail_title">Details</string>
    <string name="feel_temp">feel temperature</string>
    <string name="see_distance">visibility</string>
    <string name="rain_size">rainfall</string>
    <string name="temp">Temperature</string>
    <string name="weather_hours_forecast_title">24h forecast</string>
    <string name="uv_index_title">UV index</string>
    <string name="sport_index_title">Sport index</string>
    <string name="trav_index_title">Travel index</string>
    <string name="car_index_title">Car wash</string>
    <string name="air_quality_index_title">Air quality index</string>
    <string name="flu_index_title">frigorism</string>
    <string name="weather_index_title">Life index</string>
    <string name="weather_temp" translatable="false">%s°</string>
    <string name="weather_percent" translatable="false">"%s'\%'"</string>
    <string name="weather_km" translatable="false">%skm</string>
    <string name="weather_mm" translatable="false">%smm</string>
    <string name="weather_ug_m3" translatable="false">%sμg/m³</string>
    <string name="weather_update">%s published</string>
    <string name="city_exist">City is exist</string>
    <string name="weather_common_index_title">Common index</string>
    <string name="relocation_toast">new location city: %1$s</string>
    <string name="weather_source_title">HeWeather</string>
    <string name="hot_city_json">"{
  "cities": [
    {
      "city": "北京",
      "country": "中国",
      "areaId": "CN101010100",
      "lat": "39.904989",
      "lon": "116.405285",
      "prov": "北京"
    },
    {
      "city": "上海",
      "country": "中国",
      "areaId": "CN101020100",
      "lat": "31.231706",
      "lon": "121.472644",
      "prov": "上海"
    },
    {
      "city": "广州",
      "country": "中国",
      "areaId": "CN101280101",
      "lat": "23.125178",
      "lon": "113.280637",
      "prov": "广东"
    },
    {
      "city": "深圳",
      "country": "中国",
      "areaId": "CN101280601",
      "lat": "22.547",
      "lon": "114.085947",
      "prov": "广东"
    },
    {
      "city": "珠海",
      "country": "中国",
      "areaId": "CN101280701",
      "lat": "22.224979",
      "lon": "113.553986",
      "prov": "广东"
    },
    {
      "city": "佛山",
      "country": "中国",
      "areaId": "CN101280800",
      "lat": "23.028762",
      "lon": "113.122717",
      "prov": "广东"
    },
    {
      "city": "南京",
      "country": "中国",
      "areaId": "CN101190101",
      "lat": "32.041544",
      "lon": "118.767413",
      "prov": "江苏"
    },
    {
      "city": "苏州",
      "country": "中国",
      "areaId": "CN101190401",
      "lat": "31.299379",
      "lon": "120.619585",
      "prov": "江苏"
    },
    {
      "city": "厦门",
      "country": "中国",
      "areaId": "CN101230201",
      "lat": "24.490474",
      "lon": "118.11022",
      "prov": "福建"
    },
    {
      "city": "长沙",
      "country": "中国",
      "areaId": "CN101250101",
      "lat": "28.19409",
      "lon": "112.982279",
      "prov": "湖南"
    },
    {
      "city": "成都",
      "country": "中国",
      "areaId": "CN101270101",
      "lat": "30.659462",
      "lon": "104.065735",
      "prov": "四川"
    },
    {
      "city": "福州",
      "country": "中国",
      "areaId": "CN101230101",
      "lat": "26.075302",
      "lon": "119.306239",
      "prov": "福建"
    },
    {
      "city": "杭州",
      "country": "中国",
      "areaId": "CN101210101",
      "lat": "30.287459",
      "lon": "120.153576",
      "prov": "浙江"
    },
    {
      "city": "武汉",
      "country": "中国",
      "areaId": "CN101200101",
      "lat": "30.584355",
      "lon": "114.298572",
      "prov": "湖北"
    },
    {
      "city": "青岛",
      "country": "中国",
      "areaId": "CN101120201",
      "lat": "36.082982",
      "lon": "120.355173",
      "prov": "山东"
    },
    {
      "city": "西安",
      "country": "中国",
      "areaId": "CN101050311",
      "lat": "44.581032",
      "lon": "129.61311",
      "prov": "陕西"
    },
    {
      "city": "太原",
      "country": "中国",
      "areaId": "CN101100101",
      "lat": "37.857014",
      "lon": "112.549248",
      "prov": "山西"
    },
    {
      "city": "石家庄",
      "country": "中国",
      "areaId": "CN101090101",
      "lat": "38.045474",
      "lon": "114.502461",
      "prov": "河北"
    },
    {
      "city": "沈阳",
      "country": "中国",
      "areaId": "CN101070101",
      "lat": "41.796767",
      "lon": "123.429096",
      "prov": "辽宁"
    },
    {
      "city": "重庆",
      "country": "中国",
      "areaId": "CN101040100",
      "lat": "29.291965",
      "lon": "108.170255",
      "prov": "重庆"
    },
    {
      "city": "天津",
      "country": "中国",
      "areaId": "CN101030100",
      "lat": "39.125596",
      "lon": "117.190182",
      "prov": "天津"
    },
    {
      "city": "南宁",
      "country": "中国",
      "areaId": "CN101300101",
      "lat": "22.82402",
      "lon": "108.320004",
      "prov": "广西"
    }
  ]
}"</string>

</resources>
