<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical">

 <!--   <TextView
        style="@style/w_section_title"
        android:text="@string/air_quality_index_title"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/divider_linearlayout"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="16dp"
        android:showDividers="none">

        <com.ape.material.weather.widget.AqiView
            android:id="@+id/w_aqi_view"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/w_aqi_detail_text"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            tools:text="-"
            android:textColor="@color/w_text_primary"
            android:textSize="22dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/todaydetail_info_layout">

                <TextView
                    style="@style/todaydetail_info_title"
                    android:text="@string/pm2_5"/>

                <TextView
                    android:id="@+id/w_aqi_pm25"
                    style="@style/todaydetail_info_content"
                    tools:text="--"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/w_divider_size_secondary"
                android:background="@color/w_divider_secondary"/>

            <LinearLayout style="@style/todaydetail_info_layout">

                <TextView
                    style="@style/todaydetail_info_title"
                    android:text="@string/pm10"/>

                <TextView
                    android:id="@+id/w_aqi_pm10"
                    style="@style/todaydetail_info_content"
                    tools:text="--"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/w_divider_size_secondary"
                android:background="@color/w_divider_secondary"/>

            <LinearLayout style="@style/todaydetail_info_layout">

                <TextView
                    style="@style/todaydetail_info_title"
                    android:text="@string/so2"/>

                <TextView
                    android:id="@+id/w_aqi_so2"
                    style="@style/todaydetail_info_content"
                    tools:text="--"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/w_divider_size_secondary"
                android:background="@color/w_divider_secondary"/>

            <LinearLayout style="@style/todaydetail_info_layout">

                <TextView
                    style="@style/todaydetail_info_title"
                    android:text="@string/no2"/>

                <TextView
                    android:id="@+id/w_aqi_no2"
                    style="@style/todaydetail_info_content"
                    tools:text="--"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_divider_size"
        android:background="@color/w_divider"/>
</LinearLayout>